K8/manifests/deployment.yaml
# Deployment manifest for the webapp
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: sheziidowu/my-web-app:latest
          ports:
            - containerPort: 8080
